--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-cats": "^0.2.5",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-spring": "^9.7.2",
     "react-tooltip": "^5.19.0"
   },
   "devDependencies": {
