--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-cats": "^0.2.5",
